objects/Targets__c/Targets__c.object-meta.xml
<CustomObject>
    <description>This Object is used to record Target Quota for Sales Reps</description>
    <label>Target</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>