objects/Targets__c/fields/Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month__c</fullName>
    <label>Fiscal Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>