objects/Targets__c/fields/L2__c.field-meta.xml
<CustomField>
    <fullName>L2__c</fullName>
    <label>L2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>