objects/Targets__c/fields/L3__c.field-meta.xml
<CustomField>
    <fullName>L3__c</fullName>
    <label>L3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>