objects/Targets__c/fields/L4__c.field-meta.xml
<CustomField>
    <fullName>L4__c</fullName>
    <label>L4</label>
    <length>250</length>
    <type>Text</type>
</CustomField>