objects/Targets__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>