objects/Targets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Effective_Date__c</columns>
    <columns>L1__c</columns>
    <columns>L2__c</columns>
    <columns>L3__c</columns>
    <columns>L4__c</columns>
    <columns>User__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Fiscal_Month__c</columns>
    <columns>Value__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Sales_Operations</group>
        <role>Finance</role>
    </sharedTo>
</ListView>